# report-writer

./: .gitignore  .vercelignore  AGENTS.md  CONTRIBUTING.md  DEPLOY.md  README.md  package-lock.json  package.json  playwright.config.ts  test-results.json  vercel.json  vitest.config.ts
apps/sandbox/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/sandbox/src/report_agent/: __init__.py  __main__.py  agent_tools.py  change_journal.py  chart_reader.py  cli.py  data_catalog.py  editor_log.py  eval_runner.py  git_integration.py  integrator.py  integrator_simple.py  orchestrator.py  outline_parser.py  report_state.py  section_mapper.py  section_meta.py
apps/sandbox/src/sandbox/: main.py
apps/sandbox/tests/: test_agent_run.py  test_agent_tools.py  test_chart_reader.py  test_cli.py  test_data_catalog.py  test_eval_runner.py  test_git_integration.py  test_integrator.py  test_outline_parser.py  test_report_state.py  test_section_mapper.py  test_section_meta.py  test_update_section.py
apps/sandbox/tmp/: emissions.html  emissions.md  report.html  report.md
apps/sandbox/tmp/_llm_calls/: 20251203_134218_emissions_openai.json  20251203_134327_emissions_openai.json  20251203_134939_projection-results_openai.json  20251203_135003_emissions_openai.json  20251203_135020_electricity-generation_openai.json  20251203_135033_energy-consumption-by-sector_openai.json  20251203_135051_overall_openai.json  20251203_135111_transport_openai.json  20251203_135131_industry_openai.json  20251203_135144_residential_openai.json  20251203_135157_commercial_openai.json  (+56 more)
(+361 files in other folders)
